# covid_predictor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
RagModule/data/: pubmed_abstracts.csv
RagModule/scripts/: build_vectorstore.py  fetch_pubmed.py  rag_pipeline.py
RagModule/tests/: test_rag_pipeline.py  test_retrieval.py
RagModule/vectorstore/faiss_pubmed/: index.pkl
covid_predictor_api/: main.py
covid_predictor_api/app/: model_interface.py  preprocessing.py  schemas.py
covid_predictor_api/model/: best_model.pkl  encoders.pkl  scaler.pkl
data/: Cleaned_Data.csv  Covid-19 Dataset.csv  Reinfection Engineered Dataset.csv
data/splitted_data/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
frontend_nextjs/: package-lock.json  package.json  pnpm-lock.yaml  start.sh  tailwind.config.js
frontend_nextjs/src/app/: globals.css  layout.js  page.js
frontend_nextjs/src/app/chatbot/: page.js
frontend_nextjs/src/components/: ChatInterface.jsx  Layout.jsx  PatientForm.jsx  PredictionResults.jsx  SystemStatus.jsx
frontend_nextjs/src/styles/: globals.css
frontend_nextjs/src/utils/: api.js
frontend_streamlit/: Home.py
frontend_streamlit/pages/: COVID_Chatbot.py
models/: best_model.pkl
notebooks/: Data_Cleaning.ipynb  Data_Splitting.ipynb  Exploratory_Data_Analysis.ipynb  Feature_Engineering.ipynb  Model_Evaluation.ipynb  Model_Evaluation.py  Model_Training.py
