[project]
name = "covid-19-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "biopython>=1.85",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "openai>=1.99.1",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "scikit-learn==1.6.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]
